infra/k8s/client-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket-client
  template:
    metadata:
      labels:
        app: ticket-client
    spec:
      containers:
        - name: ticket-client
          image: longbuibao/ticket-client
---
apiVersion: v1
kind: Service
metadata:
  name: client-clusterip-srv
spec:
  selector:
    app: ticket-client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
