infra/k8s/expriation-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-expriation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket-expriation
  template:
    metadata:
      labels:
        app: ticket-expriation
    spec:
      containers:
        - name: ticket-expriation
          image: longbuibao/ticket-expriation
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-expriation-clusterip-srv
spec:
  selector:
    app: ticket-expriation
  ports:
    - name: ticket-expriation
      protocol: TCP
      port: 3000
      targetPort: 3000
