infra/k8s/order-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-order-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket-order
  template:
    metadata:
      labels:
        app: ticket-order
    spec:
      containers:
      - name: ticket-order
        image: longbuibao/ticket-order
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-order-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: ticket-order
  ports:
  - name: ticket-order 
    protocol: TCP
    port: 3000
    targetPort: 3000
