infra/k8s/order-mongo-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-mongo
  template:
    metadata:
      labels:
        app: order-mongo
    spec:
      containers:
      - name: order-mongo
        image: mongo
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: order-mongo-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: order-mongo
  ports:
  - name: order-mongo 
    protocol: TCP
    port: 27017
    targetPort: 27017
