infra/k8s/ticket-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket
  template:
    metadata:
      labels:
        app: ticket
    spec:
      containers:
      - name: ticket
        image: longbuibao/ticket
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: ticket
  ports:
  - name: ticket 
    protocol: TCP
    port: 3000
    targetPort: 3000
