infra/k8s/ticket-mongo-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket-mongo
  template:
    metadata:
      labels:
        app: ticket-mongo
    spec:
      containers:
      - name: ticket-mongo
        image: mongo
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-mongo-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: ticket-mongo
  ports:
  - name: ticket-mongo 
    protocol: TCP
    port: 27017
    targetPort: 27017
